# MiroShark

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: auth.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: graph_builder.py  oasis_profile_generator.py  ontology_generator.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/storage/: embedding_service.py  graphiti_storage.py  neo4j_schema.py  neo4j_storage.py
backend/app/utils/: file_parser.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: index.html
frontend/src/: App.vue
frontend/src/api/: index.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js  pendingUpload.js
frontend/src/views/: Home.vue  InteractionView.vue  Login.vue  MainView.vue  Process.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
